Updated the overall backend implementation and added github action